# big-five-tester

./: .env.example  .gitignore  Cargo.toml  README.md  ai_config.example.toml  justfile
crates/bigfive/: Cargo.toml
crates/bigfive-app/: Cargo.toml  build.rs  package.json
crates/bigfive-app/locales/: en.json  ru.json
crates/bigfive-app/src/: app.rs  db.rs  i18n.rs  jobs.rs  lib.rs  main.rs
crates/bigfive-app/src/ai/: error.rs  mod.rs  pipeline.rs  prompts.rs  provider.rs
crates/bigfive-app/src/ai/provider/: anthropic.rs  mod.rs  openai.rs
crates/bigfive-app/src/components/: home.rs  lang_toggle.rs  mod.rs  results.rs  test.rs  theme_toggle.rs
crates/bigfive-app/src/config/: mod.rs
crates/bigfive-app/style/: tailwind.css
crates/bigfive/src/: inventory.rs  lib.rs  scoring.rs  types.rs
deploy/: bigfive.service  deploy.sh
scripts/: compare_models.py  deepseek_chinese_experiment.py  pyproject.toml  qwen_language_experiment.py  test_pipelines.py  test_prompts.py  test_safeguard.py  translate_experiment.py
scripts/model_outputs/: comparison_20260201_010957.json  comparison_20260201_010957.md  comparison_20260201_012758.json  comparison_20260201_012758.md  comparison_20260201_014437.json  comparison_20260201_014437.md  danila_personality_complete.md  deepseek_chinese_20260201_021747.md  deepseek_russian_direct_20260201_021531.md  deepseek_russian_direct_20260201_021747.md  deepseek_zh_to_ru_20260201_021747.md  qwen_chinese_20260201_015348_original.md  qwen_chinese_20260201_015348_translated.md  qwen_english_20260201_015348_original.md  qwen_english_20260201_015348_translated.md  translate_exp_20260201_014843_english.md  translate_exp_20260201_014843_google_gemini-2.5-flash-lite.md  translate_exp_20260201_014843_google_gemini-2.5-flash.md
scripts/pipeline_tests/20260201_033637/: 00_COMBINED.md  01_Opus_RU_(direct).md  02_Opus_EN___translate.md  03_Qwen_RU_(direct).md  04_Qwen_ZH___translate.md  05_DeepSeek_RU_(direct).md  06_DeepSeek_ZH___translate.md
scripts/prompt_tests/: v3_streamlined_20260201_031734.md  v4_minimal_20260201_031950.md  v5_shortest_20260201_031838.md  v6_final_20260201_032226.md
