[workspace]
resolver = "2"
members = ["crates/bigfive", "crates/bigfive-app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/okhsunrog/big-five-tester"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Leptos ecosystem
leptos = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
leptos_axum = "0.8"

# Server dependencies
axum = "0.8"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }

# Local crates
bigfive = { path = "crates/bigfive" }
