[package]
name = "bigfive-app"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bigfive-app"
required-features = ["ssr"]

[features]
default = []
hydrate = ["leptos/hydrate", "dep:gloo-timers"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:dotenvy",
    "dep:toml",
    "dep:thiserror",
    "dep:tracing-subscriber",
    "dep:uuid",
    "dep:axum-governor",
    "dep:lazy-limit",
    "dep:real",
    "dep:tower",
    "dep:turso",
    "dep:anyhow",
    "dep:llm-relay",
]

[dependencies]
bigfive = { workspace = true }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
toml = { version = "0.8", optional = true }
thiserror = { version = "2", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage", "Navigator", "Location", "MediaQueryList", "Clipboard"] }
console_error_panic_hook = "0.1"
pulldown-cmark = "0.13.0"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"], optional = true }
once_cell = "1.21.3"
uuid = { version = "1.20.0", features = ["v4"], optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
axum-governor = { version = "1.0.3", optional = true }
lazy-limit = { version = "1.0.3", optional = true }
real = { version = "0.1.4", features = ["axum"], optional = true }
tower = { version = "0.5.3", optional = true }
turso = { version = "0.4.4", optional = true }
anyhow = { version = "1.0.101", optional = true }
llm-relay = { version = "0.2.0", path = "../../../llm-relay", features = ["client"], optional = true }

[build-dependencies]
chrono = "0.4.43"

[package.metadata.leptos]
output-name = "bigfive-app"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3032"
reload-port = 3033
tailwind-input-file = "style/tailwind.css"
assets-dir = "public"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
